[package]
name = "tide-rustls"
version = "0.3.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "tide tls listener based on async-rustls and rustls"
readme = "README.md"
repository = "https://github.com/jbr/tide-rustls"
documentation = "https://docs.rs/tide-rustls"
license = "MIT OR Apache-2.0"
keywords = ["tide", "https", "tls"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-dup = "1.2"
async-h1 = "2.3"
futures-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
smol = "2.0"
tide = { version = "0.16", default-features = false }
